{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "8aa6152c-155b-4a06-b4c9-180dc367f1be",
            "actions": [
                {
                    "name": "SkipDialogue",
                    "type": "Button",
                    "id": "ec1c585c-7dfe-4765-9301-dd5a6049d494",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "62262960-36ca-49b4-8939-c6e5cb664c1c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e803fe5c-4645-441d-ad72-121281d93195",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}